<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_ffffff_radius_23"
    android:orientation="vertical"
    android:paddingHorizontal="30dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        android:textColor="@color/color_031A28"
        android:textSize="27dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/storage_place"
        android:textColor="@color/color_031A28"
        android:textSize="17dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Music/VoiceChanger"
        android:textColor="@color/color_031A28"
        android:textSize="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/file_name"
        android:textColor="@color/color_031A28"
        android:textSize="17dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_f3f6f7_radius_10"
        android:paddingHorizontal="10dp"
        android:textColor="@color/color_031A28"
        android:textSize="14dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp">

        <TextView
            android:id="@+id/cancelTv"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_c7d0cb_radius_9"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/color_031A28"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/saveTv"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/bg_30b874_radius_9"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/color_ffffff"
            android:textSize="17dp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>