<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_031A28">

    <ImageView
        android:id="@+id/backIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_back_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/voice_effect"
        android:textColor="@color/color_ffffff"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/backIv"
        app:layout_constraintStart_toEndOf="@id/backIv"
        app:layout_constraintTop_toTopOf="@id/backIv" />

    <TextView
        android:id="@+id/saveTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/save"
        android:textColor="@color/color_30b874"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/backIv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/backIv" />

    <FrameLayout
        android:id="@+id/playFl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/backIv">


        <ImageView
            android:id="@+id/playIv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_play" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/playAnimLv"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="50dp"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/playing" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:background="@drawable/bg_ffffff_top_radius_20"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:text="@string/change_voice"
            android:textColor="@color/color_031A28"
            android:textSize="20dp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/effectRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="25dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>